# cmake-demo

./: .gitignore  README.md  build.sh
bar/: CMakeLists.txt
bar/include/: bar.hpp
bar/src/: bar.cpp
client/: CMakeLists.txt
client/src/: main.cpp
foo/: CMakeLists.txt  FooConfig.cmake.in
foo/include/: foo.hpp
foo/src/: foo.cpp
